<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:padding="24dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal|center_vertical"
        android:layout_gravity="center_vertical">

        <TextView
            android:id="@+id/tv_ej2_question_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="16dp"
            android:text="@string/ej2_q_fav_color"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/et_ej2_fav_color"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="28dp"
            android:autofillHints="color"
            android:backgroundTint="@color/color_orange"
            android:hint="@string/ej2_hint_color"
            android:inputType="text"
            android:padding="14dp"
            android:textColorHint="#546E7A" />

        <CheckBox
            android:id="@+id/cb_ej2_like_blue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="28dp"
            android:buttonTint="@color/color_orange"
            android:padding="8dp"
            android:text="@string/ej2_cb_blue"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/tv_ej2_question_green"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ej2_q_green"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_marginBottom="12dp" />

        <RadioGroup
            android:id="@+id/rg_ej2_green"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="32dp">

            <RadioButton
                android:id="@+id/rb_ej2_yes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:buttonTint="@color/color_orange"
                android:padding="8dp"
                android:text="@string/ej2_rb_yes"
                android:textColor="@color/black" />

            <RadioButton
                android:id="@+id/rb_ej2_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ej2_rb_no"
                android:textColor="@color/black"
                android:buttonTint="@color/color_orange"
                android:padding="8dp"/>
        </RadioGroup>

        <Button
            android:id="@+id/btn_ej2_send"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:text="@string/ej2_btn_send"
            android:backgroundTint="@color/color_orange"
            android:textColor="@color/black"
            android:padding="14dp"
            android:layout_marginTop="8dp" />

    </LinearLayout>
</ScrollView>

